Fix navbar covering body content and create base for profile edit form

--- a/ShareCar.Client/src/styles/genericStyles.css
+++ b/ShareCar.Client/src/styles/genericStyles.css
@@ -7,6 +7,10 @@
     text-align: center;
 }
 
+.gen-container {
+    margin-bottom: 13%;
+}
+
 .gen-button {
     font-family: 'Lato', sans-serif;
     justify-content: center;
